--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <section class="about container">
       <h2>Рассказ о неопознанном еноте</h2>
       <h2 class="section-title">Привет, я Неопознанный енот</h2>
-      <img class="about-image" src="img/unknown-raccoon.svg" width="147" height="147" alt="Неопознанный енот">
+      <img class="about-image" src="https://yt3.ggpht.com/ytc/AKedOLSRJ19DISzqhLoyyn0NJ8hhwajTbOrp1rr5krUcFw=s900-c-k-c0x00ffffff-no-rj" width="147" height="147" alt="Неопознанный енот">
       <div class="about-content">
         <p>Товарищи! постоянное информационно-пропагандистское обеспечение нашей деятельности обеспечивает широкому кругу (специалистов) участие в формировании систем массового участия.</p>
         <p>С другой стороны постоянный количественный рост и сфера нашей активности позволяет выполнять важные задания по разработке существенных финансовых и административных условий.</p>
