--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </header>
   <main>
     <section class="about container">
-      <h2>Рассказ о неопознанном еноте</h2>
+      <h2>Рассказ </h2>
       <h2 class="section-title">Привет, я Неопознанный енот</h2>
       <img class="about-image" src="https://sun1-22.userapi.com/impf/c626120/v626120630/4488a/VhbFYNVTuwE.jpg?size=400x0&quality=90&crop=0,0,554,717&sign=163ebf16547b626c3ce6c3317907168e&c_uniq_tag=zKamYGL34ZC44IIne2MOIg_pwjvcSHJdumTNVe2wfjc&ava=1" width="147" height="147" alt="Неопознанный енот">
       <div class="about-content">
